# ChangeLog for dev-perl/Authen-SASL
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Authen-SASL/ChangeLog,v 1.41 2007/08/24 18:09:45 armin76 Exp $

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> Authen-SASL-2.10-r1.ebuild:
  Add ~alpha/~ia64 wrt #189441

  21 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Authen-SASL-2.10-r1.ebuild:
  Keyworded ~sparc wrt #189441

  20 Aug 2007; Jeroen Roovers <jer@gentoo.org> Authen-SASL-2.10-r1.ebuild:
  Marked ~hppa (bug #189441).

*Authen-SASL-2.10-r1 (19 Aug 2007)

  19 Aug 2007; Christian Hartmann <ian@gentoo.org>
  +Authen-SASL-2.10-r1.ebuild:
  New conditional dep for bug #188568

  12 May 2007; Joshua Kinard <kumba@gentoo.org> Authen-SASL-2.10.ebuild:
  Stable on mips.

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> Authen-SASL-2.10.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Authen-SASL-2.10.ebuild:
  Stable on x86, bug #169152.

  14 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Authen-SASL-2.09.ebuild, Authen-SASL-2.10.ebuild:
  Ebuild maintenance

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  Authen-SASL-2.10.ebuild:
  Stable on Alpha.

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Authen-SASL-2.10.ebuild:
  ppc stable

  07 Sep 2006; Michael Cummings <mcummings@gentoo.org>
  -Authen-SASL-2.04.ebuild:
  Removing old ebuild

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Authen-SASL-2.10.ebuild:
  Marking amd64 stable

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Authen-SASL-2.04.ebuild, Authen-SASL-2.09.ebuild, Authen-SASL-2.10.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  30 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Authen-SASL-2.10.ebuild:
  Stable on hppa

  11 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Authen-SASL-2.10.ebuild:
  Marking stable sparc

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>