@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Authen-SASL
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Authen-SASL/ChangeLog,v 1.41 2007/08/24 18:09:45 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Authen-SASL/ChangeLog,v 1.42 2007/08/31 14:01:00 angelos Exp $
+
+  31 Aug 2007; Christoph Mende <angelos@gentoo.org>
+  Authen-SASL-2.10-r1.ebuild:
+  Added ~amd64 wrt bug #189441
 
   24 Aug 2007; Raúl Porcel <armin76@gentoo.org> Authen-SASL-2.10-r1.ebuild:
   Add ~alpha/~ia64 wrt #189441
